<resources>
    <string name="ic_home">Trang chủ</string>
    <string name="ic_order">Đơn hàng</string>
    <string name="ic_Notification">Thông báo</string>
    <string name="ic_me">Cá nhân</string>
    <string name="hint_finding">Tìm kiếm</string>
    <string name="feedback">Góp ý</string>
    <string name="setting_language">Cài đặt ngôn ngữ</string>
    <string name="language">Ngôn ngữ</string>
    <string name="language_vn">Tiếng Việt</string>
    <string name="save_change">Lưu Thay Đổi</string>
    <string name="setting_title">Cài đặt</string>
    <string name="setting_app">Cài đặt ứng dụng</string>
    <string name="notification">Thông báo</string>
    <string name="account">Tài khoản</string>
    <string name="voucher_title">Mã giảm giá</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="payment">Phương thức thanh toán</string>
    <string name="logout">Đăng xuất</string>
    <string name="app_version">FoodDelivery 1.0</string>
    <string name="code">MÃ</string>
    <string name="voucher_date">Hạn sử dụng</string>
    <string name="voucher_detail">Chi tiết</string>
    <string-array name="languages">
        <item>English</item>
        <item>Tiếng Việt</item>
    </string-array>
    <string name="app_name">FoodDelivery</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="have_account_login">Đã có\ntài khoản?\nĐăng nhập ngay!\n
    </string>
    <string name="forgot_pass">Quên mật khẩu?</string>
    <string name="new_register">Người dùng mới? Đăng ký ngay!</string>
    <string name="other_method">Đăng nhập với</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="first_step">"Bước đầu tiên để bạn tham gia!     "</string>
    <string name="have_account">Đã có tài khoản?</string>
    <string name="first_name">Họ và tên đệm</string>
    <string name="last_name">Tên</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="register">Đăng ký</string>
    <string name="final_step">Bước cuối cùng\nXác thực!/></string>
    <string name="finish_title">HOÀN TẤT</string>
    <string name="send_again">Gửi lại</string>
    <string name="or_verify_mail">Hoặc xác thực bằng email đã được gửi đến mail của bạn</string>
    <string name="use_phone">Dùng số điện thoại</string>
    <string name="continue_">Tiếp tục</string>
    <string name="make_selection">LỰA CHỌN</string>
    <string name="make_selection_detail">Lựa chọn phương thức xác thực</string>
    <string name="via_sms">Xác thực bằng số điện thoại</string>
    <string name="via_mail">Xác thực bằng email</string>
    <string name="new_password_title">MẬT KHẨU MỚI</string>
    <string name="new_password_details">Danh tính của bạn đã được xác nhận!\nĐến lúc chọn mật khẩu mới</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="password_updated">CẬP NHẬT\nMẬT KHẨU</string>
    <string name="password_updated_success_message">Mật khẩu của bạn đã được cập nhật</string>
    <string name="OTP">OTP</string>
    <string name="resend">Gửi lại mã?</string>
    <string name="input_code_send_to">Nhập mã xác thực được   gửi đến số</string>
    <string name="address">Địa chỉ</string>
    <string name="require">Bắt buộc</string>
    <string name="email_pass_not_correct">Email hoặc mật khẩu không đúng</string>
    <string name="please_enter_email">Vui lòng điền email!</string>
    <string name="wrong_email_format">Sai định dạng email!</string>
    <string name="please_enter_pass">Vui lòng điền mật khẩu</string>
    <string name="email_has_been_used">Email đã có người sử dụng</string>
    <string name="pls_enter_firstname">Vui lòng điền họ và tên đệm</string>
    <string name="pls_enter_lastename">Vui lòng điền tên</string>
    <string name="pls_enter_phone">Vui lòng điền số điện thoại</string>
    <string name="wrong_phone_format">Sai định dạng số điện thoại</string>
    <string name="pass_must_match">Mật khẩu phải trùng khớp</string>
    <string name="pass_regex">Mật khẩu phải có ít nhất 8 ký tự, tồn tại chữ thường, chữ hoa, số và kí tự đặc biệt</string>
    <string name="pls_enter_address">Vui lòng điền địa chỉ</string>
    <string name="add_favourite_success">Đã thêm vào danh sách yêu thích!</string>
    <string name="remove_favourite_success">Đã xóa khỏi danh sách yêu thích!</string>
    <string name="data_loading">Đang tải</string>
    <string name="press_back_twice_to_exit">Nhấn back lần nữa để thoát!</string>
    <string name="no_data">Không có dữ liệu!</string>
    <string name="remove_watched_success">Đã xóa danh sách đã xem!</string>
    <string name="title_remove_data">Xóa dữ liệu</string>
    <string name="msg_remove_watched_data">Bạn chắc chắn muốn xóa danh sách đã xem?</string>
    <string name="msg_cancel">Hủy</string>
    <string name="search_result_for">Kết quả cho</string>
    <string name="add_cart_success">Đã thêm vào giỏ hàng!</string>
    <string name="remove_cart_success">Đã xóa khỏi giỏ hàng!</string>
    <string name="payment_cod">Phương thức thanh toán: COD</string>
    <string name="choose_order_time">Chọn thời gian giao hàng</string>
    <string name="confirm">XÁC NHẬN</string>
    <string name="today">Hôm nay</string>
    <string name="deliver_now">Giao ngay</string>
    <string name="choose_later_time">Vui lòng chọn thời gian trễ hơn thời gian hiện tại!</string>
    <string name="chose">Đã chọn</string>
    <string name="order_confirmation">Hãy chắc chắn bạn đã kiểm tra kỹ đơn hàng của mình. Bằng cách nhấn xác nhận bên dưới
        sẽ hoàn tất việc đặt hàng và không thể hoàn tác.</string>
    <string name="provide_otp_help">Vui lòng nhập mật mã OTP được gửi đến</string>
    <string name="user_not_exist">Thông tin không tồn tại trong hệ thống</string>
    <string name="shopping_cart">GIỎ HÀNG</string>
    <string name="deliver_address">Địa chỉ nhận hàng</string>
    <string name="change">Thay đổi</string>
    <string name="total_amount">Tổng cộng</string>
    <string name="freight_cost">Phí vận chuyển</string>
    <string name="sum_price">Thành tiền</string>
    <string name="note">Ghi chú</string>
    <string name="place_order">Đặt hàng</string>
    <string name="drink">Thức uống</string>
    <string name="full_name">Họ tên</string>
    <string name="__default">Mặc định</string>
    <string name="customer_comment">Khách hàng nhận xét</string>
    <string name="delete">Xoá</string>
    <string name="what_r_u_lookin">Bạn đang tìm gì?</string>
    <string name="recent_search">Tìm kiếm gần đây</string>
    <string name="seen">Đã xem</string>
    <string name="overall">Tổng</string>
    <string name="food">Thức ăn</string>
    <string name="watched">Đã xem</string>
    <string name="favorite">Yêu thích</string>
    <string name="closed">Đóng cửa</string>
    <string name="your_comment">Đánh giá của bạn</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="delivery_time">Thời gian giao hàng</string>
    <string name="merchant">Cửa hàng</string>
    <string name="order_id">Mã đơn hàng</string>
    <string name="see_comment">Xem đánh giá</string>
    <string name="buy_again">Mua lần nữa</string>
    <string name="send_comment">Gửi đánh giá</string>
    <string name="more">Thêm nữa…</string>
    <string name="product">sản phẩm</string>
    <string name="delivering">Đang giao</string>
    <string name="history">Lịch sử</string>
    <string name="now_available">Hiện có</string>
    <string name="HSD">HSD: </string>
    <string name="used">Đã dùng</string>
    <string name="expired">Hết hạn</string>
    <string name="dont_have_any_voucher">Bạn chưa có mã giảm giá nào!</string>
    <string name="done">Xong</string>
    <string name="username">Tên đăng nhập</string>
    <string name="update_ava_done">Cập nhật ảnh đại diện thành công</string>
    <string name="update_infodata_done">Cập nhật dữ liệu người dùng thành công</string>
    <string name="data_empty">Dữ liệu trống</string>
    <string name="phone_been_used">Số điện thoại đã được sử dụng</string>
    <string name="verify_failed">Xác thực không thành công</string>
    <string name="no_search_data">Không có dữ liệu tìm kiếm gần đây</string>
    <string name="verified_email_sent">Email xác thực đã được gửi đến địa chỉ mail</string>
    <string name="verfiedcode">Mã xác thực</string>
    <string name="is_sent">được gửi đến</string>
    <string name="feedback_title_hint">Chủ đề</string>
    <string name="language_en">Tiếng Anh</string>
    <string name="send_feedback">Gửi góp ý</string>
    <string name="feedback_details_hint">Chi tiết</string>
    <string name="describe_details">Mô tả chi tiết</string>
    <string name="send_feedback_success">Gửi góp ý thành công!</string>
    <string name="send_feedback_fail">Gửi góp ý thất bại, vui lòng thử lại</string>
    <string name="voucher">Mã khuyến mại</string>
    <string name="already_got">Đã lấy</string>
    <string name="checking_info">Đang kiểm tra thông tin…</string>
    <string name="error_happend_try_again">Đã có lỗi xảy ra, vui lòng thử lại!</string>
    <string name="wrong_otp">Sai mật mã OTP</string>
    <string name="expired_code">Mã đã hết hạn</string>
    <string name="login_fail">Đăng nhập thất bại</string>
    <string name="use_email">Sử dụng email</string>
    <string name="use_phoneNum">Sử dụng số điện thoại</string>
    <string name="provide_email_help">Cung cấp thông tin để chúng tôi giúp bạn\nBạn có nhớ email đã đăng ký?</string>
    <string name="email_sent_to_your_mailbox">Một email hướng dẫn\nđã được gửi đến hòm thư của bạn</string>
    <string name="menu_title">MENU</string>
    <string name="comment_title">BÌNH LUẬN</string>
    <string name="info_title">THÔNG TIN</string>
    <string name="exist_voucher">Voucher đã ở trong ví của bạn</string>
    <string name="use">Sử dụng</string>
    <string name="apply_voucher_failed">Sử dụng voucher không thành công. Vui lòng kiểm tra lại điều kiện.</string>
    <string name="choose_on_map">Lựa chọn vị trí trên bản đồ</string>
    <string-array name="feedback_title">
        <item>Góp ý cho ứng dụng</item>
        <item>Báo lỗi</item>
    </string-array>
    <string name="order_received">Đã nhận Đơn hàng</string>
    <string name="canceled">Đã huỷ</string>
    <string name="customer">Khách hàng</string>
    <string name="time">Thời gian</string>
    <string name="cod">Tiền mặt</string>
    <string name="send_comment_success">Gửi đánh giá thành công</string>
    <string name="send_comment_fail">Gửi đánh giá thất bại, vui lòng thử lại</string>
    <string name="rating_null">Chưa đánh giá</string>
    <string name="enter_comment">Viết đánh giá</string>
    <string name="order_status">Trạng thái đơn hàng</string>
    <string name="pending">Đang chờ</string>
    <string name="order_cancel">Huỷ đơn đặt hàng</string>
    <string name="delivery_success">Giao hàng thành công</string>
    <string name="received_order">Tiếp nhận đơn hàng</string>
    <string name="canceled_order_success">Huỷ đơn hàng thành công</string>
    <string name="location_details">Chi tiết </string>
    <string name="delivery_from">Giao từ: </string>
    <string name="delivery_to">Giao đến: </string>
    <string name="time_direc">Thời gian dự kiến: </string>
    <string name="distance_direc">Khoảng cách ước tính:</string>
    <string name="your_position">Vị trí của bạn</string>
    <string name="title_invalid_order">Đơn hàng không hợp lệ</string>
    <string name="title_different_merchant">Đơn đặt hàng của bạn gồm nhiều nhà bán khác nhau!
        Vui lòng chọn mua sản phẩm từ một nhà bán trên mỗi đơn đặt hàng!</string>
    <string name="copied_to_clipboard">Đã sao chép vào bộ nhớ tạm!</string>
    <string name="all">Tất cả</string>
    <string name="high_rating">Đánh giá cao</string>
    <string name="change_language_success">Thay đổi ngôn ngữ thành công!</string>
    <string name="get">Lấy</string>
</resources>