<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:title="@string/ic_home"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_order"
        android:title="@string/ic_order"
        android:icon="@drawable/ic_baseline_list_alt_24"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@+id/holder"/>
    <item
        android:id="@+id/nav_notification"
        android:title="@string/ic_Notification"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_me"
        android:title="@string/ic_me"
        android:icon="@drawable/ic_baseline_person_outline_24"
        app:showAsAction="ifRoom"/>
</menu>
