<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteTextColor"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".activity.login.ForgotPassActitivy_5">


    <TextView
        android:id="@+id/success_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:gravity="center"
        android:text="@string/password_updated"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/success_message_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:src="@drawable/checked" />


    <TextView
        android:id="@+id/success_message_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password_updated_success_message"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/fp5_bt_login"
        style="@style/loginButton"
        android:layout_below="@id/success_message_description"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/login"
        app:initialCornerAngle="27dp"
        app:spinning_bar_color="#FFF"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />


</LinearLayout>