<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <FrameLayout
        android:id="@+id/st_language_fl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/st_lg_ib_back"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/setting_language"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />
        </RelativeLayout>
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/language_hint"
        android:hint="@string/language"
        android:background="@color/light_grey"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_below="@id/st_language_fl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/auto_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/language_vn"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/st_lg_bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:backgroundTint="@color/light_red"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:text="@string/save_change"/>

    <Button
        android:id="@+id/st_lg_bt_save2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_red"
        android:text="@string/save_change"
        android:textColor="@color/white" />

</RelativeLayout>