<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/grey"
            android:background="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_order_time"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/btn_back"/>
    </RelativeLayout>

    <TimePicker
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:numbersTextColor="@color/black"
        android:numbersSelectorColor="@color/light_blue"
        android:headerBackground="@color/light_blue" />

    <TextView
        android:id="@+id/tv_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_later_time"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/light_blue"/>
</LinearLayout>