<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/login_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".activity.login.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/login_bk_color"
        android:focusableInTouchMode="true"
        android:gravity="center"
        tools:context=".activity.login.LoginActivity">

        <FrameLayout
            android:id="@+id/lg_frame1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="480dp"
                android:layout_height="400dp"
                android:layout_marginLeft="-200dp"
                android:layout_marginTop="-200dp"
                android:background="@drawable/elipse" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">


                <TextView
                    android:layout_marginTop="32dp"
                    style="@style/viewParent.headerText.NoMode"
                    android:text="@string/have_account_login" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/language_hint"
                    android:hint="@string/language"
                    android:background="@color/white"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/lg_atcp_language"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:text="@string/language_vn"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:hint="@string/login_email_hint"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lg_et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/login_password_hint"
                    android:textColorHint="@color/black"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/lock">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lg_et_password"
                        style="@style/modifiedEditText"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lg_tv_forgetPass"
                    style="@style/viewParent"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/newsMoreTextSize" />x

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:id="@+id/lg_bt_login"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/login"
                    android:textAlignment="center"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

                <TextView
                    android:id="@+id/lg_tv_register"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/new_register"
                    android:textAlignment="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:weightSum="12">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorPrimaryDark" />

                    <TextView
                        style="@style/viewParent.headerText.NoMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:text="@string/other_method"
                        android:textAlignment="center"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorPrimaryDark" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/lg_bt_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/google_icon" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_side_bg" />

        <ImageView
            android:id="@+id/lg_iv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="11dp"
            android:src="@drawable/ic_add_img"
            tools:ignore="NotSibling"/>


    </RelativeLayout>
</ScrollView>